--- a/src/main.scss
+++ b/src/main.scss
@@ -723,10 +723,16 @@ margin on the iframe, cause it breaks stuff. */
     box-shadow: #fff 0 0 0 5px;
 }
 
+section {
+    margin:0 0 25px;
+    padding:0 0 15px;
+    border-bottom:1px solid #ddd;
+}
+
 .post-title {
     color: #59361F;
-    margin:0 0 4rem;
-    font-size: 4rem;
+    margin:0 0 18px;
+    font-size:28px;
 }
 
 .post-title a {
@@ -1446,3 +1452,36 @@ margin on the iframe, cause it breaks stuff. */
 
 }
 
+.stats-list {
+    margin:0;
+    font-size:16px;
+}
+
+.project {
+    margin-bottom:45px;
+
+    a, a:hover {
+        display:block;
+        text-decoration:none;
+        color:#222;
+    }
+
+    img {
+        border:1px solid #ccc;
+        width:100%;
+    }
+
+    .title {
+        font-weight:bold;
+        text-align:center;
+        margin:0 0 6px 0;
+        font-size:16px;
+    }
+
+    p {
+        line-height:19px;
+        margin:0;
+        padding:0;
+        font-size:14px;
+    }
+}
