--- a/src/main.scss
+++ b/src/main.scss
@@ -1074,6 +1074,7 @@ section {
    ========================================================================== */
 
 .site-footer {
+    overflow:hidden;
     box-shadow:0 0 10px rgba( 0, 0, 0, 0.2 );
     position: relative;
     margin: 8rem 0 0 0;
