--- a/src/main.scss
+++ b/src/main.scss
@@ -1503,3 +1503,26 @@ section {
     }
 
 }
+
+.project-list {
+     
+    a {
+        display:block;
+        text-decoration:none;
+    }
+
+    .title {
+        font-size:16px;
+        font-weight:bold;
+    }
+
+    p {
+        margin:0;
+        font-size:14px;
+        line-height:18px;
+    }
+
+    li {
+        margin: 0 0 15px;
+    }
+}
